--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -7,14 +7,14 @@ jobs:
     name: Build on ${{ matrix.distro }} ${{ matrix.arch }}
     runs-on: ubuntu-18.04
     strategy:
-      fail-fast: false
       matrix:
-        - arch: s390x
-          distro: ubuntu18.04
-          build_type: "Release"
-        - arch: s390x
-          distro: ubuntu18.04
-          build_type: "Debug"
+        include:
+          - arch: s390x
+            distro: ubuntu18.04
+            build_type: "Release"
+          - arch: s390x
+            distro: ubuntu18.04
+            build_type: "Debug"
 
     steps:
     - uses: actions/checkout@v1
