--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -21,18 +21,19 @@ jobs:
 
     - uses: uraimo/run-on-arch-action@v2.0.8
       name: Configure and Build
+      id: build
       with:
         arch: ${{ matrix.arch }}
         distro: ${{ matrix.distro }}
         githubToken: ${{ github.token }}
-        shell: cmake -P {0}
-        install: |
-          sudo apt-get update -q -y
-          sudo apt-get install -q -y texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
         env: |
           CC: gcc
           CXX: g++
           CTEST_OUTPUT_ON_FAILURE: ON
+        shell: cmake -P {0}
+        install: |
+          sudo apt-get update -q -y
+          sudo apt-get install -q -y texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
         run: |
           execute_process(
             COMMAND cmake
