--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -32,8 +32,8 @@ jobs:
           CTEST_OUTPUT_ON_FAILURE: ON
         shell: /bin/bash
         install: |
-          sudo apt-get update -q -y
-          sudo apt-get install -q -y texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
+          apt-get update -q -y
+          apt-get install -q -y texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
         run: |
           cmake \
             -S . \
