--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -35,8 +35,9 @@ jobs:
           apt-get update -q -y
           apt-get install -q -y cmake texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
         run: |
+          mkdir build
           cmake \
-            -S "/home/runner/work/doxygen/doxygen" \
+            -S . \
             -B build \
             -G "Unix Makefiles" \
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
