--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -35,6 +35,7 @@ jobs:
           apt-get update -q -y
           apt-get install -q -y cmake texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz qt5-default
         run: |
+          mkdir build
           cmake \
             -S .. \
             -B build \
