--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -48,5 +48,5 @@ jobs:
             -Dbuild_xmlparser=YES \
             ..
           cmake --build $(pwd)
-          cmake --build $(pwd) --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --docbook --rtf"
+          cmake --build $(pwd) --target tests -- TEST_FLAGS="--xml --xmlxsd --xhtml --docbook --rtf"
           cmake --build $(pwd) --target docs
