--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -33,7 +33,7 @@ jobs:
         shell: /bin/bash
         install: |
           apt-get update -q -y
-          apt-get install -q -y cmake gcc g++ flex bison qt5-default zlib1g-dev texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz
+          apt-get install -q -y cmake gcc g++ flex bison qt5-default zlib1g-dev libsqlite3-dev texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz
         run: |
           mkdir build
           cd build
@@ -46,6 +46,7 @@ jobs:
             -Dbuild_app=YES \
             -Dbuild_parse=YES \
             -Dbuild_xmlparser=YES \
+            -Duse_sqlite3=ON \
             ..
           cmake --build $(pwd)
           cmake --build $(pwd) --target tests -- TEST_FLAGS="--xml --xmlxsd --xhtml --docbook --rtf"
