--- a/.github/workflows/multi-arch_build.yml
+++ b/.github/workflows/multi-arch_build.yml
@@ -17,15 +17,26 @@ jobs:
             build_type: "Debug"
 
     steps:
+    - name: Setup cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.ccache
+        key: build_ubuntu-18.04_${{ matrix.build_type }}
+
     - uses: actions/checkout@v1
 
-    - uses: uraimo/run-on-arch-action@v2.0.8
+    - uses: uraimo/run-on-arch-action@v2.0.9
       name: Configure and Build
       id: build
       with:
         arch: ${{ matrix.arch }}
         distro: ${{ matrix.distro }}
         githubToken: ${{ github.token }}
+        setup: |
+          mkdir -p ~/.ccache
+        dockerRunArgs: |
+          --volume "${HOME}/.ccache:/root/.ccache"
         env: |
           CC: gcc
           CXX: g++
@@ -33,8 +44,11 @@ jobs:
         shell: /bin/bash
         install: |
           apt-get update -q -y
-          apt-get install -q -y cmake gcc g++ flex bison qt5-default zlib1g-dev libsqlite3-dev texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz
+          apt-get install -q -y build-essential ccache cmake flex bison qt5-default zlib1g-dev libsqlite3-dev texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils libxapian-dev ghostscript libxml2-utils graphviz
+          /usr/sbin/update-ccache-symlinks
+          echo 'export PATH="/usr/lib/ccache:$PATH"' | tee -a ~/.bash
         run: |
+          set -x
           mkdir build
           cd build
           cmake \
